--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
         "@vue/cli-plugin-router": "~5.0.8",
         "@vue/cli-plugin-unit-jest": "~5.0.8",
         "@vue/cli-plugin-vuex": "~5.0.8",
-        "@vue/cli-service": "~5.0.8",
+        "@vue/cli-service": "^3.3.1",
         "@vue/test-utils": "^2.2.4",
         "@vue/vue3-jest": "^27.0.0",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "babel-jest": "^27.5.1",
-        "cypress": "^8.7.0",
+        "cypress": "^13.5.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
