--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
         "axios": "^1.1.2",
         "babel-jest": "^27.5.1",
         "cypress": "^13.5.0",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-vue": "^8.0.3",
+        "eslint": "8.53.0",
+        "eslint-config-prettier": "9.0.0",
+        "eslint-plugin-prettier": "5.0.1",
+        "eslint-plugin-vue": "9.18.1",
         "jest": "^27.5.1",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.24",
-        "prettier": "^2.8.0",
+        "prettier": "3.1.0",
         "sass": "^1.56.1",
         "sass-loader": "^12.0.0",
         "tailwindcss": "^3.3.2",
@@ -45,7 +45,7 @@
         "@coreui/vue": "^4.5.0",
         "@coreui/vue-chartjs": "2.0.1",
         "core-js": "^3.26.1",
-        "vue": "^3.2.36",
+        "vue": "^3.3.8",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0"
     }
