--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
         "@coreui/utils": "^1.3.1",
         "@coreui/vue": "^4.5.0",
         "@coreui/vue-chartjs": "2.0.1",
+        "@inertiajs/vue3": "^1.0.14",
         "core-js": "^3.26.1",
+        "lodash.clonedeep": "^4.5.0",
         "vue": "^3.3.8",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0"
